# 2026-07-07

./: Dockerfile  RUN.bat  pyproject.toml  run_all.sh  test_dev_install.py
1_Tutos/: Tuto NumPy.ipynb  Tuto PyTorch.ipynb  Tuto Python 3.ipynb  Tuto pandas.ipynb
2_Fondamentaux/: Introduction & Projet bout-en-bout.ipynb
3_LinearRegression/: Descente de gradient.ipynb
4_DeepLearning/: Autograd and MLP.ipynb  CNN.ipynb  LLM.ipynb  RAG.ipynb  Sequential Data.ipynb
999_Corrigés/: Autograd and MLP corrigé.ipynb  CNN corrigé.ipynb  Descente de gradient corrigé.ipynb  Introduction & Projet bout-en-bout corrigé.ipynb  LLM corrigé.ipynb  RAG corrigé.ipynb  Sequential Data corrigé.ipynb  Tuto NumPy corrigé.ipynb  Tuto PyTorch corrigé.ipynb
