[project]
name = "dl-project"
version = "0.1.0"
description = "Deep Learning project"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "aiocache>=0.12.3",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.21.0",
    "alembic>=1.18.4",
    "anthropic>=0.86.0",
    "anyio>=4.14.0",
    "apscheduler>=3.11.2",
    "argon2-cffi>=25.1.0",
    "arrow>=1.4.0",
    "authlib>=1.6.10",
    "av>=17.1.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-identity>=1.25.2",
    "azure-storage-blob>=12.28.0",
    "backoff>=2.2.1",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "boto3>=1.42.62",
    "chromadb>=1.5.2",
    "ctranslate2>=4.8.0",
    "dataclasses-json>=0.6.7",
    "datasets>=3.0",
    "ddgs>=9.11.3",
    "docx2txt>=0.9",
    "einops>=0.8.2",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "filelock>=3.29.0",
    "fpdf2>=2.8.7",
    "fsspec>=2026.4.0",
    "ftfy>=6.3.1",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-storage>=3.9.0",
    "google-genai>=1.66.0",
    "grpcio>=1.81.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "ipython>=9.14.1",
    "ipywidgets",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "jsonpatch>=1.33",
    "jsonschema>=4.26.0",
    "jupyterlab>=4.6.0",
    "kubernetes>=36.0.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.10",
    "langsmith>=0.8.18",
    "ldap3>=2.9.1",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "matplotlib",
    "mcp>=1.26.0",
    "msoffcrypto-tool>=6.0.0",
    "networkx>=3.6.1",
    "nltk>=3.9.3",
    "notebook>=7.6.0",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "onnxruntime>=1.24.3",
    "openai>=2.29.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "opensearch-py>=3.1.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "orjson>=3.11.9",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "posthog>=5.4.0",
    "psutil>=7.2.2",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=18,<23",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "pydub>=0.25.1",
    "pyjwt>=2.11.0",
    "pymysql>=1.1.2",
    "pypandoc>=1.16.2",
    "pypdf>=6.7.5",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "python-pptx>=1.0.2",
    "python-socketio>=5.16.1",
    "pytube>=15.0.0",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "redis>=7.4.0",
    "regex>=2026.5.9",
    "requests>=2.33.1",
    "rich>=13.9.4",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "sentence-transformers>=5.4.0",
    "sentencepiece>=0.2.1",
    "shapely>=2.1.2",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.48",
    "sse-starlette>=3.4.5",
    "sympy>=1.14.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.5.4",
    "typer>=0.25.1",
    "uvicorn>=0.41.0",
    "validators>=0.35.0",
    "watchfiles>=1.2.0",
    "websockets>=16.0",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
    "youtube-transcript-api>=1.2.4",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv]
# Default: install CPU versions of torch from PyPI
# With --extra gpu: install CUDA 12.6 versions from PyTorch index
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cu126", extra = "gpu" },
]
