[project]
name = "dl-project"
version = "0.1.0"
description = "Deep Learning project (formation PyTorch) - image Docker CPU only"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- Environnement notebooks ---
    "notebook>=7.6.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.0",
    # --- Data / calcul scientifique ---
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "pillow>=10.4.0",
    # --- Deep Learning (CPU, voir [tool.uv.sources] plus bas) ---
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    # --- NLP / LLM / RAG ---
    "transformers>=4.44.0",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "chromadb>=0.5.0",
    # --- Interface web locale (lancee par run_all.sh) ---
    "open-webui>=0.9.6",
]

[tool.uv]
# Image Docker = CPU only : torch / torchvision sont tires depuis l'index CPU
# de PyTorch. `explicit = true` => cet index n'est utilise QUE pour les paquets
# qui lui sont explicitement associes ci-dessous (jamais pour requests, etc.).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
